# CSE381_HW3-Vulkan

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  reference.cpp  windowsExample.env.cmake
assets/models/2.0/BoxTextured/glTF/: HW.gltf
shaders/: CMakeLists.txt  blinn_phong.frag  blinn_phong.vert  brdf_lut.frag  brdf_lut.vert  irradiance.frag  irradiance.vert  lights.frag  lights.vert  pbr.frag  pbr.vert  prefilter.frag  prefilter.vert  skybox.frag  skybox.vert
src/: controller.cpp  controller.hpp  gltf_loader.cpp  gltf_loader.hpp  main.cpp  pbr_baker.cpp  pbr_baker.hpp  stb_image_resize.cpp  test.txt  tiny_gltf.cpp
src/common/: common.hpp  cvar.cpp  cvar.hpp  error.hpp  file_utils.cpp  file_utils.hpp  glm_common.hpp  logging.hpp  timer.cpp  timer.hpp  utils.cpp  utils.hpp  vk_common.hpp
src/core/: command_buffer.cpp  command_buffer.hpp  command_pool.cpp  command_pool.hpp  descriptor_allocator.cpp  descriptor_allocator.hpp  device.cpp  device.hpp  framebuffer.cpp  framebuffer.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  image_resource.cpp  image_resource.hpp  image_view.cpp  image_view.hpp  instance.cpp  instance.hpp  physical_device.cpp  physical_device.hpp  pipeline_layout.cpp  pipeline_layout.hpp  render_pass.cpp  render_pass.hpp  renderer.cpp  renderer.hpp  sampler.cpp  sampler.hpp  surface.cpp  surface.hpp  swapchain.cpp  swapchain.hpp  sync_objects.cpp  sync_objects.hpp  vulkan_object.hpp  window.cpp  window.hpp
src/core/device_memory/: allocator.cpp  allocator.hpp  buffer.cpp  buffer.hpp  device_memory_object.hpp  image.cpp  image.hpp  vk_mem_alloc.cpp
src/scene_graph/: component.cpp  component.hpp  event.hpp  node.cpp  node.hpp  scene.cpp  scene.hpp  script.cpp  script.hpp
src/scene_graph/components/: aabb.cpp  aabb.hpp  camera.cpp  camera.hpp  image.cpp  image.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  pbr_material.cpp  pbr_material.hpp  perspective_camera.cpp  perspective_camera.hpp  sampler.cpp  sampler.hpp  submesh.cpp  submesh.hpp  texture.cpp  texture.hpp  transform.cpp  transform.hpp
src/scene_graph/components/image/: stb.cpp  stb.hpp
src/scene_graph/scripts/: free_camera.cpp  free_camera.hpp  light.cpp  light.hpp  player.cpp  player.hpp
